Fixed admin page discount issues

--- a/admin.html
+++ b/admin.html
@@ -296,7 +296,7 @@
           </tr>
         </thead>
         <tbody id="tbody">
-          <!-- rows injected here -->
+          <!-- rows injected here -->	
         </tbody>
       </table>
       <div id="empty" class="muted" style="margin-top:12px;display:none">No orders yet.</div>
@@ -647,13 +647,37 @@ function distanceKmBetween(lat1, lon1, lat2, lon2) {
 		  });
 		}
 
-	
+			
+			function money(n) {
+			  const x = Number(n);
+			  return Number.isFinite(x) ? x : 0;
+			}
+
+			function getOrderTotals(o) {
+			  const subtotal = money(o.subtotal);
+			  const discount = money(o.discount);
+			  const delivery = money(o.delivery_fee);
+
+			  // Prefer stored total if present
+			  const storedTotal = money(o.total);
+			  const total = (storedTotal > 0)
+				? storedTotal
+				: Math.round((subtotal - discount + delivery) * 100) / 100;
+
+			  return { subtotal, discount, delivery, total };
+			}
+
 			function sumTotal(order) {
-		  // Safely sum subtotal + delivery fee
-		  const subtotal = Number(order.subtotal || 0);
-		  const delivery = Number(order.delivery_fee || 0);
-		  return subtotal + delivery;
-		}
+			  const storedTotal = Number(order.total);
+			  if (Number.isFinite(storedTotal) && storedTotal > 0) return storedTotal;
+
+			  const subtotal = Number(order.subtotal || 0);
+			  const discount = Number(order.discount || 0);
+			  const delivery = Number(order.delivery_fee || 0);
+
+			  return Math.round((subtotal - discount + delivery) * 100) / 100;
+			}
+
 
 		function fmtDate(value) {
 		  if (!value) return '—';
@@ -780,93 +804,111 @@ function getBookingDate(o) {
 
 
 
-		function buildDetailsHTML(o) {
-		  const c = o.customers || {};
-		  const lines = (o.order_items || []).map(item => {
-			const mods = (item.modifiers || []).map(m => m.name).join(', ');
-			const spice = (item.spice == null)
-			  ? ''
-			  : (' ' + '🌶️'.repeat(Math.max(0, Math.min(3, Number(item.spice)))));
-			const modsFrag = mods
-			  ? `<div class="small muted">Mods: ${mods}</div>`
-			  : '';
-			const img = item.img
-			  ? `<img src="${item.img}" alt="${item.name}" style="width:60px;height:60px;object-fit:cover;border-radius:8px;border:1px solid #eee;margin-right:8px">`
-			  : '';
+function buildDetailsHTML(o) {
+  const c = o.customers || {};
+  const lines = (o.order_items || []).map(item => {
+    const mods = (item.modifiers || []).map(m => m.name).join(', ');
+    const spice = (item.spice == null)
+      ? ''
+      : (' ' + '🌶️'.repeat(Math.max(0, Math.min(3, Number(item.spice)))));
+    const modsFrag = mods
+      ? `<div class="small muted">Mods: ${mods}</div>`
+      : '';
+    const img = item.img
+      ? `<img src="${item.img}" alt="${item.name}" style="width:60px;height:60px;object-fit:cover;border-radius:8px;border:1px solid #eee;margin-right:8px">`
+      : '';
 
-			return `
-			  <div class="line">
-				<div style="display:flex;align-items:center;gap:8px">
-				  ${img}
-				  <div>
-					<div><strong>${item.name}</strong> × ${item.qty}${spice}</div>
-					${modsFrag}
-				  </div>
-				</div>
-				<div><strong>${fmtMoney(Number(item.unit_price) * Number(item.qty))}</strong></div>
-			  </div>
-			`;
-		  }).join('');
+    return `
+      <div class="line">
+        <div style="display:flex;align-items:center;gap:8px">
+          ${img}
+          <div>
+            <div><strong>${item.name}</strong> × ${item.qty}${spice}</div>
+            ${modsFrag}
+          </div>
+        </div>
+        <div><strong>${fmtMoney(Number(item.unit_price) * Number(item.qty))}</strong></div>
+      </div>
+    `;
+  }).join('');
 
-		  // Address + "View on map" link
-		  const addr = [c.address].filter(Boolean).join('<br>');
-		  const rawAddress = (c.address || '').replace(/\s+/g, ' ').trim();
-		  const mapUrl = rawAddress
-			? `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(rawAddress)}`
-			: '';
-			
-			// ---- Distance text for delivery orders ----
-			  let distanceHTML = '';
-			  if (
-				(o.order_type || '').toLowerCase() === 'delivery' &&
-				o.customer_lat != null &&
-				o.customer_lng != null
-			  ) {
-				const km = distanceKmBetween(
-				  RESTAURANT_LAT,
-				  RESTAURANT_LNG,
-				  o.customer_lat,
-				  o.customer_lng
-				);
+  // Address + "View on map" link
+  const addr = [c.address].filter(Boolean).join('<br>');
+  const rawAddress = (c.address || '').replace(/\s+/g, ' ').trim();
+  const mapUrl = rawAddress
+    ? `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(rawAddress)}`
+    : '';
 
-				if (km != null && !Number.isNaN(km)) {
-				  distanceHTML = `<div class="small">Approx distance: ${km.toFixed(1)} km</div>`;
-				}
-			  }
+  // ---- Distance text for delivery orders ----
+  let distanceHTML = '';
+  if (
+    (o.order_type || '').toLowerCase() === 'delivery' &&
+    o.customer_lat != null &&
+    o.customer_lng != null
+  ) {
+    const km = distanceKmBetween(
+      RESTAURANT_LAT,
+      RESTAURANT_LNG,
+      o.customer_lat,
+      o.customer_lng
+    );
 
-		   return `
-			<div class="grid" style="margin-bottom:8px">
-			  <div>
-				<div class="muted small">Customer</div>
-				<div><strong>${c.full_name || '—'}</strong></div>
-				<div class="small">${c.phone || ''}</div>
-				<div class="small">${c.email || ''}</div>
-			  </div>
-			  <div>
-				<div class="muted small">Address</div>
-				<div class="small">
-				  ${addr || '—'}
-				  ${mapUrl
-					? `<div><a href="${mapUrl}" target="_blank" class="small details-link">View on map</a></div>`
-					: ''
-				  }
-				</div>
-			  </div>
-			  <div>
-				<div class="muted small">Order</div>
-				<div class="small">Type: <strong>${(o.order_type || 'collection').toUpperCase()}</strong></div>
-				<div class="small">Subtotal: ${fmtMoney(o.subtotal)}</div>
-				<div class="small">Delivery: ${fmtMoney(o.delivery_fee)}</div>
-				<div class="small"><strong>Total: ${fmtMoney(sumTotal(o))}</strong></div>
-				${distanceHTML}
-			  </div>
-			</div>
-			<div class="muted small">Notes: ${o.notes ? o.notes : '—'}</div>
-			<div style="margin-top:10px;border-top:1px dashed #eee;padding-top:10px">
-			  ${lines || '<div class="muted small">No items.</div>'}
-			</div>
-		  `;
-		}
+    if (km != null && !Number.isNaN(km)) {
+      distanceHTML = `<div class="small">Approx distance: ${km.toFixed(1)} km</div>`;
+    }
+  }
+
+  // ---- Money (discount-aware) ----
+  const subtotal = Number(o.subtotal || 0);
+  const discount = Number(o.discount || 0);
+  const delivery = Number(o.delivery_fee || 0);
+
+  // Prefer stored total, otherwise derive it
+  const total =
+    (Number(o.total) > 0)
+      ? Number(o.total)
+      : Math.round((subtotal - discount + delivery) * 100) / 100;
+
+  const discountLine =
+    (discount > 0)
+      ? `<div class="small">${o.discount_label || 'Discount'}: <span style="color:#198754"><strong>-£${discount.toFixed(2)}</strong></span></div>`
+      : '';
+
+  return `
+    <div class="grid" style="margin-bottom:8px">
+      <div>
+        <div class="muted small">Customer</div>
+        <div><strong>${c.full_name || '—'}</strong></div>
+        <div class="small">${c.phone || ''}</div>
+        <div class="small">${c.email || ''}</div>
+      </div>
+      <div>
+        <div class="muted small">Address</div>
+        <div class="small">
+          ${addr || '—'}
+          ${mapUrl
+            ? `<div><a href="${mapUrl}" target="_blank" class="small details-link">View on map</a></div>`
+            : ''
+          }
+        </div>
+      </div>
+      <div>
+        <div class="muted small">Order</div>
+        <div class="small">Type: <strong>${(o.order_type || 'collection').toUpperCase()}</strong></div>
+        <div class="small">Subtotal: ${fmtMoney(subtotal)}</div>
+        ${discountLine}
+        <div class="small">Delivery: ${fmtMoney(delivery)}</div>
+        <div class="small"><strong>Total: ${fmtMoney(total)}</strong></div>
+        ${distanceHTML}
+      </div>
+    </div>
+    <div class="muted small">Notes: ${o.notes ? o.notes : '—'}</div>
+    <div style="margin-top:10px;border-top:1px dashed #eee;padding-top:10px">
+      ${lines || '<div class="muted small">No items.</div>'}
+    </div>
+  `;
+}
+
 
 
 
@@ -997,67 +1039,77 @@ function render(orders) {
   empty.style.display = 'none';
 
   orders.forEach(o => {
-    const tr = document.createElement('tr');
-    tr.classList.add('row');
+  const tr = document.createElement('tr');
+  tr.classList.add('row');
 
-    // Highlight future booking dates
-    const isFuture = isFutureUkDay(o);
-    if (isFuture) {
-      tr.classList.add('row-attention');
-    }
+  const isFuture = isFutureUkDay(o);
+  if (isFuture) tr.classList.add('row-attention');
 
-    const customer = o.customers || {};
-    const total = sumTotal(o);
+  const customer = o.customers || {};
+  console.log('[ADMIN MONEY]', o.order_ref, { subtotal: o.subtotal, discount: o.discount, delivery_fee: o.delivery_fee, total: o.total });
 
-    // RTK ref for this order
-    const rtkRef = o.order_ref || `RTK-${String(o.id).slice(0, 8)}`;
+  const rtkRef = o.order_ref || `RTK-${String(o.id).slice(0, 8)}`;
 
-    const status = o.status || 'pending';
-    const statusLabel = STATUS_LABELS[status] || status;
+  const status = o.status || 'pending';
+  const statusLabel = STATUS_LABELS[status] || status;
 
-    // data-* attributes
-    tr.dataset.orderId = o.id;
-    tr.dataset.orderRef = rtkRef;
-    tr.dataset.name = customer.full_name || "";
-    tr.dataset.email = customer.email || "";
-    tr.dataset.phone = customer.phone || "";
-    tr.dataset.total = total;
-    tr.dataset.asapRequested = o.asap_requested ? "true" : "false";
-    tr.dataset.communicationPreference = o.communication_preference || "email";
-    tr.dataset.createdAt = o.created_at;
-    tr.dataset.preferredTime = o.preferred_time || "";
+  // ---- correct money calculation (discount-aware) ----
+  const subtotal = Number(o.subtotal || 0);
+  const discount = Number(o.discount || 0);
+  const delivery = Number(o.delivery_fee || 0);
 
-    // ROW HTML
-    tr.innerHTML = `
-      <td class="mono">${rtkRef}</td>
-      <td>${fmtDisplayTime(o)}</td>
-      <td>
-        <div><strong>${customer.full_name || '—'}</strong></div>
-        <div class="small muted">${customer.phone || ''}</div>
-      </td>
-      <td><span class="pill">${(o.order_type || 'collection').toUpperCase()}</span></td>
-      <td><span class="status-pill status-${status}">${statusLabel}</span></td>
-      <td class="nowrap">${fmtMoney(o.subtotal)}</td>
-      <td class="nowrap">${fmtMoney(o.delivery_fee)}</td>
-      <td class="nowrap"><strong>${fmtMoney(total)}</strong></td>
-      <td class="actions" style="text-align:right">
-        <button class="btn-small" data-action="toggle">Details</button>
-        <button class="btn-small" data-action="print">Print</button>
+  const finalTotal =
+    (Number(o.total) > 0)
+      ? Number(o.total)
+      : Math.round((subtotal - discount + delivery) * 100) / 100;
 
-        <div style="display:inline-flex;align-items:center;gap:4px;margin-left:8px">
-          <input type="time"
-                 class="suggest-time-input"
-                 data-order-id="${o.id}"
-                 style="font-size:12px;padding:3px 4px">
-          <button class="btn-small btn-suggest" data-order-id="${o.id}">Suggest</button>
-        </div>
+  // data-* attributes (use the correct totals)
+  tr.dataset.orderId = o.id;
+  tr.dataset.orderRef = rtkRef;
+  tr.dataset.name = customer.full_name || "";
+  tr.dataset.email = customer.email || "";
+  tr.dataset.phone = customer.phone || "";
+  tr.dataset.total = finalTotal;              // ✅ correct
+  tr.dataset.subtotal = subtotal;             // ✅ useful
+  tr.dataset.discount = discount;             // ✅ useful
+  tr.dataset.deliveryFee = delivery;          // ✅ useful
+  tr.dataset.asapRequested = o.asap_requested ? "true" : "false";
+  tr.dataset.communicationPreference = o.communication_preference || "email";
+  tr.dataset.createdAt = o.created_at;
+  tr.dataset.preferredTime = o.preferred_time || "";
 
-        <button class="btn-small btn-accept"  data-order-id="${o.id}">Accept</button>
-        <button class="btn-small btn-decline" data-order-id="${o.id}">Decline</button>
-        <button class="btn-small btn-paid"    data-order-id="${o.id}">Mark paid</button>
-        <button class="btn-small btn-complete" data-order-id="${o.id}">Completed</button>
-      </td>
-    `;
+  // ROW HTML
+  tr.innerHTML = `
+    <td class="mono">${rtkRef}</td>
+    <td>${fmtDisplayTime(o)}</td>
+    <td>
+      <div><strong>${customer.full_name || '—'}</strong></div>
+      <div class="small muted">${customer.phone || ''}</div>
+    </td>
+    <td><span class="pill">${(o.order_type || 'collection').toUpperCase()}</span></td>
+    <td><span class="status-pill status-${status}">${statusLabel}</span></td>
+    <td class="nowrap">${fmtMoney(subtotal)}</td>
+    <td class="nowrap">${fmtMoney(delivery)}</td>
+    <td class="nowrap"><strong>${fmtMoney(finalTotal)}</strong></td>
+    <td class="actions" style="text-align:right">
+      <button class="btn-small" data-action="toggle">Details</button>
+      <button class="btn-small" data-action="print">Print</button>
+
+      <div style="display:inline-flex;align-items:center;gap:4px;margin-left:8px">
+        <input type="time"
+               class="suggest-time-input"
+               data-order-id="${o.id}"
+               style="font-size:12px;padding:3px 4px">
+        <button class="btn-small btn-suggest" data-order-id="${o.id}">Suggest</button>
+      </div>
+
+      <button class="btn-small btn-accept"  data-order-id="${o.id}">Accept</button>
+      <button class="btn-small btn-decline" data-order-id="${o.id}">Decline</button>
+      <button class="btn-small btn-paid"    data-order-id="${o.id}">Mark paid</button>
+      <button class="btn-small btn-complete" data-order-id="${o.id}">Completed</button>
+    </td>
+  `;
+
 
     // ---- details row (your existing block) ----
     const details = document.createElement('div');
@@ -1135,7 +1187,10 @@ async function updateOrderStatus(orderId, newStatus) {
 				preferred_time,
 				order_type,
 				subtotal,
+				discount,
+				discount_label,
 				delivery_fee,
+				total,
 				notes,
 				status,
 				communication_preference,
