--- a/admin.html
+++ b/admin.html
@@ -1206,6 +1206,7 @@ async function updateOrderStatus(orderId, newStatus) {
 				  *
 				)
 			  `)
+			  .eq('is_test', false)
 			  .order('created_at', { ascending: false });
 
 
